Add label type configuration field

--- a/templates/backOffice/default/module_configuration.html
+++ b/templates/backOffice/default/module_configuration.html
@@ -15,6 +15,7 @@
                 {render_form_field field="password"}
                 {render_form_field field="center_number"}
                 {render_form_field field="customer_number"}
+                {render_form_field field="label_type"}
                 {render_form_field field="isTest"}
             </div>
 
