--- a/templates/backOffice/default/module_configuration.html
+++ b/templates/backOffice/default/module_configuration.html
@@ -2,7 +2,7 @@
     <div class="title title-without-tabs">
         {intl l="Configure DpdLabel" d="dpdlabel.bo.default"}
     </div>
-    {form name="dpdlabel.api.configuration.form"}
+    {form name="dpdlabel_api_config_form"}
         <form action="{url path="/admin/module/DpdLabel/api-config"}" method="post">
             {form_hidden_fields}
 
