--- a/templates/backOffice/default/hook/dpdlabel-menu-item.html
+++ b/templates/backOffice/default/hook/dpdlabel-menu-item.html
@@ -1,5 +1,6 @@
 <li class="" id="module_menu_dpdlabel_label">
     <a title="Modules" href="{url path="/admin/module/DpdLabel/labels"}">
-       {intl l="DPD Labels" d="dpdlabel.bo.default"}
+        <i class="fa fa-lg fa fa-ticket-alt"></i>
+        <span class="item-text">{intl l="DPD Labels" d="dpdlabel.bo.default"}</span>
     </a>
 </li>
