--- a/templates/backOffice/default/hook/dpdlabel-order-edit-label.html
+++ b/templates/backOffice/default/hook/dpdlabel-order-edit-label.html
@@ -15,28 +15,33 @@
     </tr>
     <tr>
         {loop type="order" name="get-order-date" id=$order_id customer="*" backend_context="true"}
+            {$weight = $WEIGHT}
             {DpdLabelNumber order_id=$ID}
-            <td>{$labelNbr}</td>
+            <td>{$labelNbr|default:'-'}</td>
             <td>{format_date date=$CREATE_DATE}</td>
             {loop type="order_address" name="destination_loop" id=$DELIVERY_ADDRESS}
                 <td>{$ADDRESS1} {$CITY} {$ZIPCODE}</td>
             {/loop}
-            <td>
-                <a class="btn btn-primary pull-right {if !$labelNbr} hidden {/if}" href="{url path='/admin/module/DpdLabel/saveLabel' labelNbr=$labelNbr orderId=$order_id}">
-                    {intl l='Download' d="dpdlabel.bo.default"}
-                </a>
-                <a class="btn btn-info pull-right {if !$labelNbr} hidden {/if}" href={url path="/admin/module/DpdLabel/getLabel/{$REF}"}>
-                    {intl l='View' d="dpdlabel.bo.default"}
-                </a>
-                <a class="btn btn-danger pull-right {if !$labelNbr} hidden {/if}" href="{url path='/admin/module/DpdLabel/deleteLabel' orderId=$order_id redirect_url="/admin/order/update/$order_id"} ">
-                    {intl l='Delete' d="dpdlabel.bo.default"}
-                </a>
-                {if !$labelNbr}
-                    <a class="btn btn-primary pull-right" href=#dpdlabel-label-dialog data-toggle="modal">
-                        {intl l='Generate' d="dpdlabel.bo.default"}
+            <td class="text-right">
+                {if $labelNbr}
+                    <a class="btn btn-primary" href="{url path='/admin/module/DpdLabel/saveLabel' labelNbr=$labelNbr orderId=$order_id}">
+                        <span class="glyphicon glyphicon-download"></span> {intl l='Download' d="dpdlabel.bo.default"}
                     </a>
-                    <a class="btn btn-primary pull-right" href=#dpdlabel-retour-label-dialog data-toggle="modal">
-                        {intl l='Generate retour Label' d="dpdlabel.bo.default"}
+                    <a class="btn btn-info" href={url path="/admin/module/DpdLabel/getLabel/{$REF}"}>
+                        <span class="glyphicon glyphicon-eye-open"></span> {intl l='View' d="dpdlabel.bo.default"}
+                    </a>
+                    <a class="btn btn-danger" href="{url path='/admin/module/DpdLabel/deleteLabel' orderId=$order_id redirect_url="/admin/order/update/$order_id"} ">
+                        <span class="glyphicon glyphicon-trash"></span> {intl l='Delete' d="dpdlabel.bo.default"}
+                    </a>
+                {/if}
+
+                {if ! $labelNbr}
+                    <a class="btn btn-success" href="#dpdlabel-label-dialog" data-toggle="modal">
+                        <span class="glyphicon glyphicon-barcode"></span> {intl l='Generate a label' d="dpdlabel.bo.default"}
+                    </a>
+
+                    <a class="btn btn-primary" href="#dpdlabel-retour-label-dialog" data-toggle="modal">
+                        <span class="glyphicon glyphicon-arrow-left"></span> {intl l='Generate retour Label' d="dpdlabel.bo.default"}
                     </a>
                 {/if}
             </td>
@@ -48,8 +53,12 @@
 
 {capture "dpdlabel_label_creation"}
     {form_hidden_fields}
-
-    {render_form_field field='weight'}
+    {custom_render_form_field field='weight' value=$weight}
+        <div class="input-group">
+            <input type="text" {form_field_attributes field="weight" value=$weight}>
+            <span class="input-group-addon">{intl l='kg'}</span>
+        </div>
+    {/custom_render_form_field}
 {/capture}
 
 
@@ -57,7 +66,7 @@
     file = "includes/generic-create-dialog.html"
 
     dialog_id    = "dpdlabel-label-dialog"
-    dialog_title = {intl l="Create label" d='dpdlabel.bo.default'}
+    dialog_title = {intl l="Enter parcel weight" d='dpdlabel.bo.default'}
     dialog_body  = {$smarty.capture.dpdlabel_label_creation nofilter}
 
     dialog_ok_label     = {intl l="Create" d='dpdlabel.bo.default'}
@@ -72,7 +81,7 @@
     file = "includes/generic-create-dialog.html"
 
     dialog_id    = "dpdlabel-retour-label-dialog"
-    dialog_title = {intl l="Create label" d='dpdlabel.bo.default'}
+    dialog_title = {intl l="Enter returned parcel weight" d='dpdlabel.bo.default'}
     dialog_body  = {$smarty.capture.dpdlabel_label_creation nofilter}
 
     dialog_ok_label     = {intl l="Create" d='dpdlabel.bo.default'}
